fixed image overflow issue

--- a/stylesheets/global-styles.scss
+++ b/stylesheets/global-styles.scss
@@ -769,6 +769,7 @@ p {
   border-radius: 10px;
 }
 
+
 .banners {
   //display: grid;
   //grid-template-columns: 1fr 1fr;
@@ -1794,5 +1795,11 @@ ul {
 
     .bb-logo {
       width: 40% !important;
+    }
+
+    .image {
+      max-width: 100% !important;
+      margin: auto;
+      height: auto !important; 
     }
 }
